# flytwo-pro-frontend/src/app/api/functions.ts
@@ -1,6 +1,10 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { CatmatImportPost$Params as CatmatImportPost$Params } from './fn/catmat/catmat-import-post';
+export { catmatImportPost as catmatImportPost } from './fn/catmat/catmat-import-post';
+export type { CatserImportPost$Params as CatserImportPost$Params } from './fn/catser/catser-import-post';
+export { catserImportPost as catserImportPost } from './fn/catser/catser-import-post';
 export type { UsersLoginPost$Params as UsersLoginPost$Params } from './fn/users/users-login-post';
 export { usersLoginPost as usersLoginPost } from './fn/users/users-login-post';
 export type { UsersLogoutPost$Params as UsersLogoutPost$Params } from './fn/users/users-logout-post';
